--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,7 +1,9 @@
 <html>
   <head>
+    <% include partials/head %>
   </head>
   <body>
+    <% include partials/nav %>
     <p>
       Well, hello there!
     </p>
