--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,7 +14,8 @@
   <div class="collapse navbar-collapse" id="myNavbar">
    <ul class="nav navbar-nav">
     <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
+    <li><a href="/search">Search</a></li>
+    <li><a href="/preference">Preference</a></li>
     <li><a href="/profile">Profile</a></li>
     <li><a href="/logout">Logout<a></li>
    </ul>
