--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,21 +1,11 @@
-<% layout('layout') -%>
-<div class="navbar">
-  <div class="container">
-    <div class="nav-collapse collapse navbar-responsive-collapse">
-      <ul class="nav navbar-nav">
-        <li><h3>Welcome to Dr. GEOL CHOI's Home</h3></li>
-      </ul>
-    </div><!-- /.nav-collapse -->
-  </div>
-</div>
-
-<ul class="breadcrumb">
-  <br />
-  <p><a href="http://gchoi.net">http://www.gchoi.net</a></p>
-  <p><a href="http://cinema4dr12.tistory.com">http://cinema4dr12.tistory.com</a></p>
-  <br />
-  <center>
-    <p><img src="images/CJ_BG.png" class="img-rounded" width="100%"/></p>
-  </center>
-  <br />
-</ul>
+<html>
+  <head>
+    <% include partials/head %>
+  </head>
+  <body>
+    <% include partials/nav %>
+    <p>
+      this is search page
+    </p>
+  </body>
+</html>
