--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,8 +17,13 @@
     <li><a href="/search">Search</a></li>
     <li><a href="/preference">Preference</a></li>
     <li><a href="/profile">Profile</a></li>
-    <li><a href="/logout">Logout<a></li>
+    <li><a href="/login">Login<a></li>
    </ul>
+
+   <ul class="nav navbar-nav pull-right" stype="margin:4px;">
+     <!-- Button Trigger modal -->
+     <% if(login == 'login') { %>
+       }
   </div>
  </div>
 </nav>
