--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,8 +13,8 @@
   </div>
   <div class="collapse navbar-collapse" id="myNavbar">
    <ul class="nav navbar-nav">
-    <li><a href="/">Home</a></li>
-    <li><a href="/search">Search</a></li>
+    <li><a href="/">Search</a></li>
+    <li><a href="/main">Home</a></li>
     <li><a href="/preference">Preference</a></li>
     <li><a href="/profile">Profile</a></li>
     <li><a href="/login">Login<a></li>
