--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
       Welcome to Gitfolio!
     </p>
     <p>
-      <a href="https://github.com/login/oauth/authorize?scope=user:email&client_id=a9673603ce17a0b961f0">Login</a>
+      <a href="https://github.com/login/oauth/authorize?scope=user:email&client_id=<%= client_id %>">Login</a>
     </p>
   </body>
 </html>
