--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,6 +8,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <!-- my css -->
-<link rel="stylesheet" href="/css/master.css">
+<link rel="stylesheet" href="/css/main.css">
 
 <title>Gitfolio</title>
