--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,11 @@
 <head>
   <title><%=title%></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' type='text/css' href='/css/bootstrap.min.css'/>
+  <link rel='stylesheet' type='text/css' href='/public/css/bootstrap.min.css'/>
   <link href="css/bootstrap-glyphicons.css" rel="stylesheet">
   <script src="http://code.jquery.com/jquery.js"></script>
   <script type="text/javascript" src="../se/js/HuskyEZCreator.js" charset="utf-8"></script>
-  <script src="/js/bootstrap.min.js"></script>
+  <script src="/public/js/bootstrap.min.js"></script>
   <style>
   body {
     margin: 0;
