--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,18 +12,18 @@
   <title>Gitfolio</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
   <!-- Plugin CSS -->
-  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+  <link href="/vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Theme CSS -->
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/css/main.min.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -172,8 +172,8 @@
   <div class="container-fluid">
     <div class="row no-gutter popup-gallery">
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/1.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -187,8 +187,8 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/2.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -202,8 +202,8 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/3.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -217,8 +217,8 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/4.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -232,8 +232,8 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/5.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -247,8 +247,8 @@
         </a>
       </div>
       <div class="col-lg-4 col-sm-6">
-        <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-          <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+        <a href="/img/portfolio/fullsize/6.jpg" class="portfolio-box">
+          <img src="/img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
           <div class="portfolio-box-caption">
             <div class="portfolio-box-caption-content">
               <div class="project-category text-faded">
@@ -266,18 +266,18 @@
 </section>
 
 <!-- jQuery -->
-<script src="vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/jquery/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="/vendor/scrollreveal/scrollreveal.min.js"></script>
+<script src="/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 <!-- Theme JavaScript -->
-<script src="js/main.js"></script>
+<script src="/js/main.min.js"></script>
 <script>
     $('.carousel').carousel({
         interval: 5000 //changes the speed
