--- a/views/main.ejs
+++ b/views/main.ejs
@@ -58,6 +58,15 @@
         <li>
           <a class="page-scroll" href="#portfolio">Activity</a>
         </li>
+        <li>
+          <a class="page-scroll" href="/search">Search</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="/preference">Setting</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="">Logout</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
