--- a/views/main.ejs
+++ b/views/main.ejs
@@ -180,6 +180,26 @@
   </div>
   <div class="container-fluid">
     <div class="row no-gutter popup-gallery">
+      <% for(var i = 0; i < documentCount; i++){ %>
+        <div class="col-lg-4 col-sm-6">
+          <a href="/img/portfolio/fullsize/1.jpg" class="portfolio-box">
+            <img src="/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-description">
+                  <%= activityCards[i].description %>
+                </div>
+                <div class="project-category text-faded">
+                  <%= activityCards[i].cardType %>
+                </div>
+                <div class="project-name">
+                  <%= activityCards[i].importanceLevel %>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+  		<% } %>
       <div class="col-lg-4 col-sm-6">
         <a href="/img/portfolio/fullsize/1.jpg" class="portfolio-box">
           <img src="/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
