--- a/views/search.ejs
+++ b/views/search.ejs
@@ -37,9 +37,9 @@
         <h1 id="homeHeading">Gitfolio</h1>
         <hr>
         <p>Search what you want!</p>
-        <form class="form-inline">
-          <input id="search-input" type="email" class="form-control" size="60" placeholder="Search Username" required>
-          <a href="" type="button" class="btn btn-default btn-xl sr-button">Search</a>
+        <form class="form-inline" action="api/userProfiles" method="get">
+          <input id="userID" type="string" class="form-control" size="60" placeholder="Search Username" required>
+          <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Search</button>
         </form>
         <div class="sign-button-group">
           <a href="" id="sign-up-btn" class="btn btn-default btn-xl sr-button">Sign Up</a>
