--- a/views/main.ejs
+++ b/views/main.ejs
@@ -85,7 +85,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+      <div class="fill" style="background-image: image('/public/img/repositoryback1.png')"></div>
       <div class="carousel-caption">
         <h2>Caption 1</h2>
       </div>
