--- a/views/main.ejs
+++ b/views/main.ejs
@@ -86,7 +86,7 @@
   <div class="carousel-inner">
     <% if(repositories.length > 0){ %>
       <div class="item active">
-        <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+        <div class="fill" style="background-image:url('../public/img/repositoryback1.png');"></div>
         <div class="carousel-caption">
           <div class="skill-name">
           </div>
@@ -98,7 +98,7 @@
       <% } %>
     <% for(var i = 1; i < repositories.length; i++){ %>
       <div class="item">
-        <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+        <div class="fill" style="background-image:url('../public/img/repositoryback1.png');"></div>
         <div class="carousel-caption">
           <div class="skill-name">
           </div>
