--- a/views/search.ejs
+++ b/views/search.ejs
@@ -34,7 +34,7 @@
   <header>
     <div class="header-content">
       <div class="header-content-inner">
-        <h1 id="homeHeading">Gitfolio</h1>
+        <img id="logo" src="/img/logo.png">
         <hr>
         <p>Search what you want!</p>
         <form class="form-inline" action="api/userProfiles" method="get">
