--- a/views/main.ejs
+++ b/views/main.ejs
@@ -86,7 +86,7 @@
   <div class="carousel-inner">
     <% if(repositories.length > 0){ %>
       <div class="item active">
-        <div class="fill" style="background-image:url('../public/img/repositoryback1.png');"></div>
+        <div class="fill" style="background-image:url('/img/repositoryback1.png');"></div>
         <div class="carousel-caption">
           <div class="skill-name">
           </div>
@@ -96,17 +96,17 @@
         </div>
       </div>
       <% } %>
-    <% for(var i = 1; i < repositories.length; i++){ %>
-      <div class="item">
-        <div class="fill" style="background-image:url('../public/img/repositoryback1.png');"></div>
-        <div class="carousel-caption">
-          <div class="skill-name">
-          </div>
-          <div class="description">
-            <%= repositories[i].description %>
+      <% for(var i = 1; i < repositories.length; i++){ %>
+        <div class="item">
+          <div class="fill" style="background-image:url('/img/repositoryback1.png');"></div>
+          <div class="carousel-caption">
+            <div class="skill-name">
+            </div>
+            <div class="description">
+              <%= repositories[i].description %>
+            </div>
           </div>
         </div>
-      </div>
       <% } %>
     <div class="item">
       <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
@@ -138,7 +138,7 @@
         <h2 class="section-heading">Biography</h2>
         <hr class="light">
         <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-        <a href="http://www.google.com" class="page-scroll btn btn-default btn-xl sr-button">Go to LinkedIn</a>
+        <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
       </div>
     </div>
   </div>
@@ -246,11 +246,11 @@
           <fieldset>
             <div class="form-group">
               <label>Activity URL</label>
-              <input type="text" class="form-control" name="activityURL" id="activityURL" placeholder="Activity URL">
+              <input type="text" class="form-control" name="activityURL" id="activityURL" placeholder="Activity URL" required>
             </div>
             <div class="form-group">
               <label>Activity Description</label>
-              <input type="text" class="form-control" name="description" id="description" placeholder="Descripton" maxlength="25">
+              <input type="text" class="form-control" name="description" id="description" placeholder="Descripton" required>
             </div>
 
             <div class="form-group">
@@ -283,7 +283,7 @@
               </div>
             </div>
           </fieldset>
-          <div name="userID" value="haven"/>
+          <div name="userID" value=<%= userID %>/>
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-primary" value="SUBMIT">Add</button>
