--- a/public/css/search.css
+++ b/public/css/search.css
@@ -21,9 +21,9 @@ header {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    background-color: #ffffff;
+    background-image: url('/img/searchback.png');
     text-align: center;
-    color: white;
+    color: transparent;
 }
 header .header-content {
     position: relative;
@@ -43,7 +43,7 @@ header .header-content .header-content-inner hr {
 }
 header .header-content .header-content-inner p {
     font-weight: 300;
-    color: rgba(255, 255, 255, 0.7);
+    color: #88B04B;
     font-size: 16px;
     margin-bottom: 50px;
 }
@@ -132,13 +132,14 @@ fieldset[disabled] .btn-default.active {
     color: #88B04B;
     background-color: #88B04B;
 }
-#search-input {
+#userID {
     height : 50px;
-    border: none;
+    border-width: medium;
+    border-color: #88B04B;
     border-radius: 300px;
 }
 .sign-button-group {
-    padding: 30px;
+    margin: 30px;
 }
 #sign-in-btn {
     margin-left: 30px;
