--- a/views/preference.ejs
+++ b/views/preference.ejs
@@ -30,8 +30,100 @@
     <![endif]-->
   </head>
   <body>
-    <header>
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+          </button>
+          <a class="navbar-brand page-scroll" href="/main">Gitfolio</a>
+        </div>
 
-    </header>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a class="page-scroll" href="#about">About</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="#services">Skillset</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="#portfolio">Activity</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="/">Search</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="/preference">Setting</a>
+            </li>
+            <li>
+              <a class="page-scroll" href="">Logout</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
+    <section class="bg-primary" id="biography">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2 class="section-heading">Biography</h2>
+            <hr class="light">
+            <label for="bio">Biography:</label>
+            <textarea class="form-control" rows="5" id="bio"></textarea>
+            <label for="skillset"></label>
+            <hr class="light">
+            <div id="skillset">
+              <div class="checkbox">
+                <label><input type="checkbox" value="java">Java</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="python">Python</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="html">HTML</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="javascript">Javascript</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="c">C</label>
+              </div>
+              <div class="checkbox">
+                <label><input type="checkbox" value="c++">C++</label>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2 class="section-heading">Biography</h2>
+            <hr class="light">
+            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-primary" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2 class="section-heading">Biography</h2>
+            <hr class="light">
+            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
