--- a/views/main.ejs
+++ b/views/main.ejs
@@ -138,7 +138,7 @@
         <h2 class="section-heading">Biography</h2>
         <hr class="light">
         <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-        <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
+        <a class="page-scroll btn btn-default btn-xl sr-button" href=<%= userLinkedInLink %>>Go to LinkedIn</a>
       </div>
     </div>
   </div>
@@ -209,7 +209,9 @@
   		<% } %>
     </div>
     </div>
-    <a data-toggle="modal" href="#cardAdd" class="btn btn-primary btn-small" style="height:32px">add</a>
+    <% if(login == 'true') {%>
+      <a data-toggle="modal" href="#cardAdd" class="btn btn-primary btn-small" style="height:32px">add</a>
+    <% } %>
   </div>
 </section>
 
@@ -282,8 +284,11 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <input hidden="true" name="userID" value=<%= userID %>>
+              <input hidden="true" name="login" value=<%= login %>>
+            </div>
           </fieldset>
-          <div name="userID" value=<%= userID %>/>
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-primary" value="SUBMIT">Add</button>
