--- a/views/search.ejs
+++ b/views/search.ejs
@@ -37,20 +37,22 @@
         <h1 id="homeHeading">Gitfolio</h1>
         <hr>
         <p>Search what you want!</p>
-        <form class="form-inline" action="api/userProfiles" method="get">
-          <input id="userID" type="string" class="form-control" size="60" placeholder="Search Username" required>
+        <form class="form-inline" action="main" method="get">
+          <input name="userID" type="string" class="form-control" size="60" placeholder="Search Username" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Search</button>
+          <div name="login" value='false'/>
         </form>
         <div class="sign-button-group">
           <a id="sign-up-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_up').hidden = false; getElementById('sign_in').hidden = true;") >Sign Up</a>
           <a id="sign-in-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_in').hidden = false; getElementById('sign_up').hidden = true;") >Sign In</a>
         </div>
-        <form id="sign_up" class="form-inline" action="api/userProfiles" method="post" hidden="true">
-          <input id="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
+        <form id="sign_up" class="form-inline" action="main" method="post" hidden="true">
+          <input name="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Sign Up</button>
         </form>
-        <form id="sign_in" class="form-inline" action="api/userProfiles" method="get" hidden="true">
-          <input id="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
+        <form id="sign_in" class="form-inline" action="main" method="get" hidden="true">
+          <input name="login" value='true' hidden='true'/>
+          <input name="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Sign In</button>
         </form>
       </div>
