--- a/views/preference.ejs
+++ b/views/preference.ejs
@@ -73,54 +73,120 @@
           <div class="col-lg-8 col-lg-offset-2 text-center">
             <h2 class="section-heading">Biography</h2>
             <hr class="light">
-            <label for="bio">Biography:</label>
+            <label for="bio">Biography :</label>
             <textarea class="form-control" rows="5" id="bio"></textarea>
-            <label for="skillset"></label>
+            <label for="skillset">Skillset :</label>
             <hr class="light">
             <div id="skillset">
               <div class="checkbox">
                 <label><input type="checkbox" value="java">Java</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" value="python">Python</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" value="html">HTML</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" value="javascript">Javascript</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" value="c">C</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
               <div class="checkbox">
                 <label><input type="checkbox" value="c++">C++</label>
+                <label for="sel1">level :</label>
+                <select class="form-control" id="sel1">
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                </select>
               </div>
+            </div>
+            <div id="organization">
+              <h2 class="section-heading">Organiztion</h2>
+              <hr class="light">
+              <label for="url">Organization</label>
+              <input id="url" type="string" class="form-control" size="60" placeholder="input organization name" required>
+            </div>
+            <div id="linkedin">
+              <h2 class="section-heading">Linked</h2>
+              <hr class="light">
+              <label for="url">LinkedIn</label>
+              <input id="url" type="string" class="form-control" size="60" placeholder="input LinkedIn link" required>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-primary" id="about">
+    <section id="repository">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-center">
-            <h2 class="section-heading">Biography</h2>
+            <h2 class="section-heading">Repository</h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="bg-primary" id="about">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 text-center">
-            <h2 class="section-heading">Biography</h2>
+            <label for="url">URL :</label>
+            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
+            <label for="description">Description :</label>
+            <textarea class="form-control" rows="5" id="description"></textarea>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="page-scroll btn btn-default btn-xl sr-button" href='<%= userLinkedInLink %>'>Go to LinkedIn</a>
+            <label for="url">URL :</label>
+            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
+            <label for="description">Description :</label>
+            <textarea class="form-control" rows="5" id="description"></textarea>
+            <hr class="light">
+            <label for="url">URL :</label>
+            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
+            <label for="description">Description :</label>
+            <textarea class="form-control" rows="5" id="description"></textarea>
+            <hr class="light">
+            <label for="url">URL :</label>
+            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
+            <label for="description">Description :</label>
+            <textarea class="form-control" rows="5" id="description"></textarea>
+            <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Apply</button>
           </div>
         </div>
       </div>
