--- a/views/search.ejs
+++ b/views/search.ejs
@@ -37,7 +37,7 @@
         <img id="logo" src="/img/logo.png">
         <hr>
         <p>Search what you want!</p>
-        <form class="form-inline" action="main" method="get">
+        <form class="form-inline" action="main" method="post">
           <input name="userID" type="string" class="form-control" size="60" placeholder="Search Username" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Search</button>
           <div name="login" value='false'/>
@@ -46,11 +46,11 @@
           <a id="sign-up-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_up').hidden = false; getElementById('sign_in').hidden = true;") >Sign Up</a>
           <a id="sign-in-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_in').hidden = false; getElementById('sign_up').hidden = true;") >Sign In</a>
         </div>
-        <form id="sign_up" class="form-inline" action="main" method="post" hidden="true">
+        <form id="sign_up" class="form-inline" action="api/userProfiles" method="post" hidden="true">
           <input name="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Sign Up</button>
         </form>
-        <form id="sign_in" class="form-inline" action="main" method="get" hidden="true">
+        <form id="sign_in" class="form-inline" action="main" method="post" hidden="true">
           <input name="login" value='true' hidden='true'/>
           <input name="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Sign In</button>
