Fix preference page layout

--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -125,8 +125,76 @@ p {
         color: #88B04B;
     }
 }
-.section-heading {
+header {
+    position: relative;
+    width: 100%;
+    min-height: auto;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-image: url('/img/repositoryback1.png');
+    text-align: center;
+    color: black;
+}
+header .header-content {
+    position: relative;
+    text-align: center;
+    padding: 100px 15px 100px;
+    width: 100%;
+}
+header .header-content .header-content-inner h1 {
+    font-weight: 700;
+    text-transform: uppercase;
     margin-top: 0;
+    margin-bottom: 0;
+    font-size: 30px;
+    text-align: center;
+}
+header .header-content .header-content-inner hr {
+    margin: 30px auto;
+}
+header .header-content .header-content-inner p {
+    font-weight: 300;
+    color: black;
+    font-size: 16px;
+    margin-bottom: 50px;
+}
+@media (min-width: 768px) {
+    header {
+        min-height: 100%;
+    }
+    header .header-content {
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        padding: 0 50px;
+    }
+    header .header-content .header-content-inner {
+        max-width: 100px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    header .header-content .header-content-inner h1 {
+        font-size: 50px;
+    }
+    header .header-content .header-content-inner p {
+        font-size: 18px;
+        max-width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+.section-heading {
+    margin-top: 30px;
+}
+@media (min-width: 768px) {
+    section {
+        min-height: 100%;
+    }
 }
 #sel1 {
     width: 20%;
@@ -188,4 +256,7 @@ fieldset[disabled] .btn-default.active {
 .btn-default .badge {
     color: #88B04B;
     background-color: #88B04B;
+}
+#forbutton {
+    margin: 30px;
 }
