--- a/views/search.ejs
+++ b/views/search.ejs
@@ -79,5 +79,16 @@
         </div>
       </div>
     </div>
+
+
+      <!-- jQuery -->
+      <script src="/vendor/jquery/jquery.min.js"></script>
+
+      <!-- Bootstrap Core JavaScript -->
+      <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+      <!-- Plugin JavaScript -->
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+      <script src="/vendor/scrollreveal/scrollreveal.min.js"></script>
 </body>
 </html>
