--- a/views/preference.ejs
+++ b/views/preference.ejs
@@ -171,35 +171,30 @@
         </div>
       </div>
     </section>
-    <section id="repository" action="api/repositories" method="post">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 text-center">
-            <h2 class="section-heading">Repository</h2>
-            <hr class="light">
-            <label for="url">URL :</label>
-            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
-            <label for="description">Description :</label>
-            <textarea class="form-control" rows="5" id="description"></textarea>
-            <hr class="light">
-            <label for="url">URL :</label>
-            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
-            <label for="description">Description :</label>
-            <textarea class="form-control" rows="5" id="description"></textarea>
-            <hr class="light">
-            <label for="url">URL :</label>
-            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
-            <label for="description">Description :</label>
-            <textarea class="form-control" rows="5" id="description"></textarea>
-            <hr class="light">
-            <label for="url">URL :</label>
-            <input id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
-            <label for="description">Description :</label>
-            <textarea class="form-control" rows="5" id="description"></textarea>
-            <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Apply</button>
+    <section id="repository">
+      <form class="" action="api/repositories/add" method="post">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+              <h2 class="section-heading">Repository</h2>
+              <hr class="light">
+              <label>Current your repositories</label>
+              <% for(var i = 0; i < repositories.length; i++){ %>
+              <div class="description">
+                <%= repositories[i].repoName %>
+              </div>
+              <% }%>
+            <div></br></div>
+              <label for="url">URL :</label>
+              <input name="repoURL" id="url" type="string" class="form-control" size="60" placeholder="input repository link" required>
+              <label for="description">Description :</label>
+              <input hidden="true" name="userID" value=<%= userID %>>
+              <textarea name="description" class="form-control" rows="5" id="description"></textarea>
+              <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Apply</button>
+            </div>
           </div>
         </div>
-      </div>
+      </form>
     </section>
   </body>
 </html>
