--- a/views/preference.ejs
+++ b/views/preference.ejs
@@ -69,8 +69,8 @@
     </nav>
     <header>
       <div class="header-content">
-        <div class="header-content-inner text-center">
-          <h1 id="homeHeading">Gitfolio</h1>
+        <div class="header-content-inner">
+          <img id="logo" src="/img/logo.png">
           <hr>
           <p>Change your Biography</p>
         </div>
@@ -97,7 +97,7 @@
               </div>
             </form>
             <form class="" action="api/skillSets" method="post">
-              <label for="skillset">Skillset :</label>
+              <h2 class="section-heading">Skillset</h2>
               <hr class="light">
               <div id="skillset">
                 <div class="checkbox">
