--- a/views/main.ejs
+++ b/views/main.ejs
@@ -180,7 +180,13 @@
       <% for(var i = 0; i < activityCards.length; i++){ %>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href=<%= activityCards.activityURL %>>
-            <img src="/img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+            <% if(activityCards[i].cardType == 'issues') {%>
+            <img src="/img/issue.png" class="img-responsive" alt="">
+            <% } else if(activityCards[i].cardType == 'pull') {%>
+            <img src="/img/pull.png" class="img-responsive" alt="">
+            <% } else { %>
+            <img src="/img/commit.png" class="img-responsive" alt="">
+            <% } %>
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-name">
