--- a/views/preference.ejs
+++ b/views/preference.ejs
@@ -105,7 +105,7 @@
                   <input name="skillName" id="url" type="string" class="form-control" size="60" placeholder="input skill name" required>
                   <label for="sel1">level :</label>
                   <select name="skillLevel" class="form-control" id="sel1">
-                    <option value="1" default>1</option>
+                    <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
