--- a/views/search.ejs
+++ b/views/search.ejs
@@ -46,7 +46,7 @@
           <a id="sign-up-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_up').hidden = false; getElementById('sign_in').hidden = true;") >Sign Up</a>
           <a id="sign-in-btn" class="btn btn-default btn-xl sr-button" onclick="getElementById('sign_in').hidden = false; getElementById('sign_up').hidden = true;") >Sign In</a>
         </div>
-        <form id="sign_up" class="form-inline" action="api/userProfiles" method="post" hidden="true">
+        <form id="sign_up" class="form-inline" action="api/userProfiles/add" method="post" hidden="true">
           <input name="userID" type="string" class="form-control" size="60" placeholder="Your github ID" required>
           <button type="submit" class="btn btn-default btn-xl sr-button" value="SUBMIT">Sign Up</button>
         </form>
