--- a/public/css/preference.css
+++ b/public/css/preference.css
@@ -218,6 +218,7 @@ header .header-content .header-content-inner p {
     -webkit-transition: all 0.35s;
     -moz-transition: all 0.35s;
     transition: all 0.35s;
+    margin: 30px;
 }
 .btn-default:hover,
 .btn-default:focus,
